# centurion

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  config.toml  index.html  print.html  scenario.toml  searcher-c2a407aa.js  searchindex-6be936e1.js  styles.css  toc-10f21eb7.js  toc.html
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-feature-request.yml  4-docs-issue.yml
.github/workflows/: ci.yml  gh-page-unstable.yml  gh-page.yml  release.yml
assets/themes/: phalanx.toml
book/: CNAME  book.toml
book/src/: README.md  SUMMARY.md
data/: Cargo.toml  build.rs
data/src/: appearance.rs  dashboard.rs  environment.rs  lib.rs  log.rs  window.rs
data/src/appearance/: theme.rs
data/src/config/: sidebar.rs
etc/: Dockerfile
examples/: entity.rs
src/: app.rs  dashboard.rs  logger.rs  main.rs  modal.rs  screen.rs  welcome.rs  widget.rs  window.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data.rs  cmd.rs  commands.rs  config.rs  core.rs  lib.rs  main.rs  utils.rs
src-tauri/src/cmd/: config.rs  transmit.rs
src-tauri/src/config/: core.rs  models.rs
src-tauri/src/core/: app_state.rs
src-tauri/src/utils/: logging.rs
src/appearance/theme/: container.rs
src/screen/: dashboard.rs  help.rs  welcome.rs
