[package]
name = "centurion"
version = "0.0.0"
authors = ["Cameron Howell <jango.djarin@proton.me>"]
description = "A GUI simulation management application adhering to the IEEE 1278.1-2012 DIS Standard."
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/centurion"
keywords = ["DIS", "IEEE", "GUI"]
rust-version = "1.74"

[dependencies]
data = { version = "0.1.0", path = "data" }

notify-rust = "4"
chrono = { version = "0.4", features = ['serde'] }
fern = "0.6.1"
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "fira-sans",
    "tokio",
    "lazy",
    "advanced",
    "image",
    "multi-window",
] }
log = "0.4.16"
once_cell = "1.18"
palette = "0.7.4"
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["rt", "fs", "process"] }
unicode-segmentation = "1.6"
open = "5.0.1"
bytesize = "1.3.0"
timeago = "0.4.2"
futures = "0.3.30"
itertools = "0.13.0"
rodio = "0.19.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }

# change to 1.2.0 when it is released https://github.com/frewsxcv/rust-dark-light/issues/38
dark-light = { git = "https://github.com/frewsxcv/rust-dark-light", rev = "3eb3e93dd0fa30733c3e93082dd9517fb580ae95" }

[workspace]
members = ["data"]

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "88a2fac1f9171f162ecfe2a033cba5ae62e23231" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "88a2fac1f9171f162ecfe2a033cba5ae62e23231" }
