[package]
name = "centurion-ui"
version = "0.1.0"
authors = ["Cameron Howell <me@crhowell.com>"]
description = "A GUI application for managing distributed simulations leveraging the IEEE 1278.1-2012 DIS application protocol."
edition = "2024"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/centurion"
keywords = ["DIS", "IEEE", "Simulation", "GUI", "Linux", "Windows"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.149"

[dev-dependencies]
bytes = "1.8.0"
once_cell = "1.21.3"
open-dis-rust = "0.4.0"

[workspace]
members = ["src-tauri"]

[lints.clippy]
pedantic     = { level = "deny", priority = -1 }
nursery      = { level = "deny", priority = -1 }
unwrap_used  = "deny"
