[package]
name = "data"
authors = ["Cameron Howell <jango.djarin@proton.me>"]
version = "0.1.0"
edition = "2021"

[features]
dev = []

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.38", features = ['serde'] }
dirs-next = "2.0.0"
iced_core = "0.13.2"
palette = "0.7.4"
rand = "0.8.4"
rand_chacha = "0.3.0"
serde_json = "1.0"
walkdir = "2.5.0"
const_format = "0.2.32"

[dependencies.serde]
version = "1.0"
features = ["derive"]
