[package]
name = "centurion"
version = "0.1.0"
authors = ["Cameron Howell <me@crhowell.com>"]
description = "A GUI application for managing distributed simulations leveraging the IEEE 1278.1-2012 DIS application protocol."
edition = "2024"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/centurion"
keywords = ["DIS", "IEEE", "Simulation", "GUI", "Linux", "Windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "centurion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1.8.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open-dis-rust = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = {version = "0.7.10", features = ["codec"] }
toml = "0.9.11"

[lints.clippy]
pedantic     = { level = "deny", priority = -1 }
nursery      = { level = "deny", priority = -1 }
unwrap_used  = "deny"
