[package]
name = "centurion"
version = "0.1.0"
authors = ["Cameron Howell <me@crhowell.com>"]
description = "A GUI application for managing distributed simulations leveraging the IEEE 1278.1-2012 DIS application protocol."
edition = "2024"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/centurion"
keywords = ["DIS", "IEEE", "Simulation", "GUI", "Linux", "Windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "centurion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = "debuginfo"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1.8.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open-dis-rust = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = {version = "0.7.10", features = ["codec"] }
toml = "0.9.11"
clap = { version = "4.5.56", features = ["derive"] }
tracing = "0.1.44"
anyhow = "1.0.100"
figment = { version = "0.10.19", features = ["toml"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tracing-appender = "0.2.4"
tauri-plugin-dialog = "2"

[lints.clippy]
pedantic     = { level = "deny", priority = -1 }
nursery      = { level = "deny", priority = -1 }
unwrap_used  = "deny"
expect_used = "deny"
